--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "KaryScript Language Support for Visual Studio Code",
 	"version": "0.0.0",
 	"publisher": "karyfoundation",
+	"icon": "icon.png",
 	"engines": {
 		"vscode": "^0.10.1"
 	},
