--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
 	"name": "karyscript",
 	"displayName": "KaryScript",
 	"description": "KaryScript Language Support for Visual Studio Code",
-	"version": "0.0.0",
+	"version": "0.0.1",
+	"preview": true,
 	"publisher": "karyfoundation",
 	"icon": "icon.png",
 	"engines": {
 		"vscode": "^0.10.1"
 	},
+	"repository": {
+        "type": "git",
+        "url": "https://github.com/karyfoundation/karyscript-vscode"
+    },
 	"categories": [
-		"Other"
+		"Languages", "Snippets"
 	],
 	"activationEvents": [
 		"onLanguage:karyscript"
